# policeman

./: policeman.cabal
app/: Main.hs
src/: Policeman.hs
src/Policeman/: Cabal.hs  Cli.hs  ColorTerminal.hs  Diff.hs  Evaluate.hs  Hie.hs  Run.hs
src/Policeman/Core/: Diff.hs  Hie.hs  Package.hs  Version.hs
src/Policeman/Download/: Common.hs  Hackage.hs
test/: Spec.hs
test/Test/Policeman/: Cabal.hs  Version.hs
