cabal-version:   2.4
name:            policeman
version:         0.0.0.0
synopsis:        Bristol Hackathon project
description:     Bristol Hackathon project
homepage:        https://github.com/kowainik/policeman
bug-reports:     https://github.com/kowainik/policeman/issues
license:         MPL-2.0
license-file:    LICENSE
author:          Kowainik
maintainer:      Kowainik <xrom.xkov@gmail.com>
copyright:       2020 Kowainik
category:        PVP, Package Management, Cabal, Development
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.4.4

source-repository head
  type:     git
  location: https://github.com/kowainik/policeman.git

common common-options
  build-depends:      base >=4.13.0.0 && <4.18
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -fhide-source-paths

  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Policeman
    Policeman.Cabal
    Policeman.Cli
    Policeman.ColorTerminal
    Policeman.Core.Diff
    Policeman.Core.Hie
    Policeman.Core.Package
    Policeman.Core.Version
    Policeman.Diff
    Policeman.Download.Common
    Policeman.Download.Hackage
    Policeman.Evaluate
    Policeman.Hie
    Policeman.Run

  -- downloading
  autogen-modules: Paths_policeman
  other-modules:   Paths_policeman
  build-depends:
    , ansi-terminal         ^>=0.10
    , bytestring
    , Cabal                 ^>=3.8.1.0
    , containers            ^>=0.6.6
    , dir-traverse          ^>=0.2.2.2
    , directory             ^>=1.3
    , extra
    , filepath              ^>=1.4
    , ghc                   ^>=9.4.4
    , gitrev                ^>=1.3
    , hashable
    , mtl                   ^>=2.2
    , optparse-applicative  ^>=0.17
    , process
    , text                  ^>=2.0.1
    , transformers          ^>=0.5.6
    , unordered-containers  ^>=0.2.19

executable policeman
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  policeman

test-suite policeman-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Test.Policeman.Cabal
    Test.Policeman.Version

  build-depends:
    , Cabal
    , directory     ^>=1.3
    , filepath      ^>=1.4
    , hedgehog
    , hspec
    , policeman
    , text
    , transformers

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
